# CGIH12-2026-2

./: .gitignore  CGHI12.sln  CMakeLists.txt
configCGHI12/: Animación_Básica.cpp  Carga de Modelos.cpp  Iluminacion.cpp  KeyFrames.cpp  Main.cpp  Main_Dibujo2D.cpp  Main_Modelado.cpp  Main_P3.cpp  Maquina de estados.cpp  Modelado_Jerarquico.cpp  Texturizado.cpp  configCGHI12.vcxproj  configCGHI12.vcxproj.filters  fuentesDeLuz.cpp
configCGHI12/Shader/: lighting.frag
src/: Main.cpp
